--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,8 @@
     "babel-watch": "^2.0.7"
   },
   "dependencies": {
+    "aws-sdk": "^2.437.0",
     "cors": "^2.8.5",
     "express": "^4.16.4"
   }
 }
-
