--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@vue/cli": "^3.5.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-flux": "^1.0.1",
