--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "@vue/cli": "^3.5.5",
     "react": "^16.8.6",
+    "react-animated-slider": "^1.1.4",
     "react-dom": "^16.8.6",
     "react-flux": "^1.0.1",
     "react-scripts": "2.1.8"
